Experimental Gosu release with Java8 support